--- a/my-project/src/app/components/main-reminder/main-reminder.component.html
+++ b/my-project/src/app/components/main-reminder/main-reminder.component.html
@@ -1,3 +1,4 @@
+<div class="reminder">
 <app-notes-collection [NoteArray]=notes (eventEmit)="eventLabel($event)" (onNewColorChange)="addNewEntry($event)" (onNewEntryDeleted)=addNewEntry($event)
   (update)=addNewEntry($event)>
 </app-notes-collection>
