--- a/my-project/src/app/components/trash/trash.component.html
+++ b/my-project/src/app/components/trash/trash.component.html
@@ -1,4 +1,5 @@
 <!-- note cards starts -->
+<div class="trash">
 <app-notes-collection
   [NoteArray]="notes"
   (onNewEntryDeleted)="eventLabel($event)"
