--- a/my-project/src/app/components/navbar/navbar.component.scss
+++ b/my-project/src/app/components/navbar/navbar.component.scss
@@ -1,33 +1,33 @@
 .menu {
-  // margin-right: 1%;
+
   color: black;
 }
 .head {
-
-  margin-right: 30px;
   color: black;
+
+max-width: 50%;
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden !important;
+
 }
 
 
 .view {
-  // margin-right: 20px;
-  // margin-left:0%;
+margin-left: 3%;
   color: black;
 }
 
 
 .person {
-  // margin-right: 15px;
 
+margin-left: 20%;
   color: black;
 }
 .search {
-  height: 39px;
-  width: 725px;
 
+  height: 39px;
+  width: 90%;
   background-color: rgb(235, 174, 22);
   border: 0px;
   border-radius: 5px;
@@ -35,12 +35,13 @@
   outline: none;
   padding: 0px 0px 0px 47px;
 }
-@media only screen and (max-width: 610px) {
-  .search{
-  width: inherit;
-  }
-  }
+// @media only screen and (max-width: 1000px) {
+//   .search{
+//   width: inherit;
+//   }
+//   }
 .searchicon {
+
   position: absolute;
   padding-left: 10px;
   color: black;
