--- a/my-project/src/app/components/add-notes/add-notes.component.scss
+++ b/my-project/src/app/components/add-notes/add-notes.component.scss
@@ -1,44 +1,21 @@
-.matcard {
-  width: 600px;
-  margin-top: 7%;
-}
-.span {
-  top: 10px;
-  right: 0px;
-  position: absolute;
-}
 
-.div2 {
-  outline: none;
-  width: 550px;
-  position: relative;
-}
-div:empty:before {
-  content: attr(data-text);
-  color: gray;
-}
+@import "../../../scss/variables.scss";
 
-.take_note {
-  padding-top: 12px;
-  padding-left: 14px;
-  padding-bottom: 0px;
+.matcard
+{
+  margin-top:7%;
 }
 .opacity {
-  opacity: 0.5;
+	opacity: 0.5;
 }
 .close {
-  float: right;
+	float: right;
 }
 .div1 {
-  margin-top: 10%;
+	margin-top: 10%;
 }
-::ng-deep.note{
-  width: 100%;
-height: auto;
-border:none;
- border: transparent;
-font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-font-size: 15px;
-outline: none
+div:empty:before {
+	content: attr(data-text);
+	color: $gray;
+}
 
-}
