--- a/my-project/src/app/components/addlabel/addlabel.component.scss
+++ b/my-project/src/app/components/addlabel/addlabel.component.scss
@@ -1,27 +1,25 @@
+@import "../../../scss/mixin.scss";
+//colors
+$color_iron_approx: rgb(214, 218, 216);
+
 .textarea {
-  width: 90%;
-  outline: none;
-}
-.textarea:empty:before {
-  content: attr(data-text);
-  opacity: 0.5;
-  font-size: 12px;
+	@include width(90%);
+	outline: none;
+	&:empty:before {
+		content: attr(data-text);
+		opacity: 0.5;
+		font-size: 12px;
+	}
 }
 .mat-stroked-button {
-  border: 0px;
-  line-height: 58px;
-  width: 270px;
-  background-color: rgb(214, 218, 216);
-  text-align: left;
-  font-weight: 400;
+	border: 0;
+	line-height: 58px;
+	@include width(270px);
+	background-color: $color_iron_approx;
+	text-align: left;
+	font-weight: 400;
 }
-.button
-{
-  float:right;
+.button {
+	float: right;
 }
-.wrap
-{
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden !important;
-}
+
