--- a/my-project/src/app/components/collaborator/collaborator.component.html
+++ b/my-project/src/app/components/collaborator/collaborator.component.html
@@ -1,3 +1,3 @@
 <button mat-icon-button *ngIf="!Delete">
-  <i class="material-icons" style="opacity: 0.5;"> person_add </i>
+  <i class="material-icons"  (click)="openDialog()" style="opacity: 0.5;"> person_add </i>
   </button>
