--- a/my-project/src/app/components/createlabel/createlabel.component.scss
+++ b/my-project/src/app/components/createlabel/createlabel.component.scss
@@ -1,31 +1,29 @@
+@import '../../../scss/mixin.scss';
+//colors
+$black: rgb(0, 0, 0);
+
 .textarea {
-  /* width:90%; */
-  outline: none;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden !important;
-  border-bottom: 2px solid black;
-}
-.textarea:empty:before {
-  content: attr(data-text);
-  opacity: 0.5;
-  font-size: 12px;
+	outline: none;
+  @include wrap();
+	border-bottom: 2px solid $black;
+	&:empty:before {
+		content: attr(data-text);
+		opacity: 0.5;
+		font-size: 12px;
+	}
 }
 .icon {
-  font-size: 16px;
-  cursor: pointer;
-  opacity: 0.7;
-}
-.icon:hover {
-  opacity: 1;
+	font-size: 16px;
+	cursor: pointer;
+	opacity: 0.7;
+	&:hover {
+		opacity: 1;
+	}
 }
 .area {
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden !important;
-  outline: none;
+  @include wrap();
 }
 .addButton {
-  float: right;
-  margin-top: 15px;
+	float: right;
+	margin-top: 15px;
 }
