--- a/my-project/src/app/components/forget/forget.component.html
+++ b/my-project/src/app/components/forget/forget.component.html
@@ -10,13 +10,13 @@
             <img src="../../../assets/images/google.svg" alt="google" class="center">
             <mat-card-title>Forget Password</mat-card-title>
             <mat-card-subtitle>to continue to your account</mat-card-subtitle>
-            <mat-form-field id="field1">
+            <mat-form-field class="field1">
               <input matInput placeholder="Email" formControlName="email" [(ngModel)]="model.uname">
               <mat-error class="alert" *ngIf="!rForm.controls['email'].valid && rForm.controls['email'].touched">provide a valid email</mat-error>
             </mat-form-field>
-            <a routerLink="/login" id="link">Back to Login</a>
+            <a routerLink="/login" class="link">Back to Login</a>
 
-            <button mat-flat-button id="button" [disabled]="!rForm.valid" (click)="reset()">Submit</button>
+            <button mat-flat-button class="button" [disabled]="!rForm.valid" (click)="reset()">Submit</button>
 
           </div>
         </mat-card>
