--- a/my-project/src/app/components/forget/forget.component.scss
+++ b/my-project/src/app/components/forget/forget.component.scss
@@ -1,15 +1,17 @@
-.container > * {
-  width: 100%;
+@import "../../../scss/mixin.scss";
+
+.field1 {
+  @include input_width;
 }
-#field1 {
-  width: 100%;
-}
-#button {
-  float: right;
+.button {
+	float: right;
 }
 a {
-  text-decoration: none;
+	text-decoration: none;
 }
 .maindiv {
-  padding: 30px 0px;
+	padding: 30px 0;
+}
+.container > * {
+	@include input_width;
 }
