--- a/my-project/src/app/components/login/login.component.html
+++ b/my-project/src/app/components/login/login.component.html
@@ -10,20 +10,20 @@
             <img src="../../../assets/images/google.svg" alt="google" class="center">
             <mat-card-title>Sign In</mat-card-title>
             <mat-card-subtitle>to continue to fundooNotes</mat-card-subtitle>
-            <mat-form-field id="field1">
+            <mat-form-field class="field1">
               <input matInput placeholder="Email" formControlName="email" [(ngModel)]="model.uname">
               <mat-error class="alert" *ngIf="!lForm.controls['email'].valid && lForm.controls['email'].touched">provide a valid email</mat-error>
             </mat-form-field>
             <br>
-            <mat-form-field id="field1">
+            <mat-form-field class="field1">
               <input matInput placeholder="Password" [type]="hide ? 'text' : 'password'" formControlName="password" [(ngModel)]="model.pass">
               <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility' : 'visibility_off'}}</mat-icon>
               <mat-error class="alert" *ngIf="!lForm.controls['password'].valid && lForm.controls['password'].touched">Enter a password(min-length:6)</mat-error>
             </mat-form-field>
-            <a routerLink="/forget" id="link">Forgot password ?</a>
+            <a routerLink="/forget" class="link">Forgot password ?</a>
             <br>
             <br>
-            <button mat-flat-button id="button" [disabled]="!lForm.valid" (click)="login()">Log In</button>
+            <button mat-flat-button class="button" [disabled]="!lForm.valid" (click)="login()">Log In</button>
             <a routerLink="/signup">Create an account</a>
             <br>
             <br>
