--- a/my-project/src/app/components/login/login.component.scss
+++ b/my-project/src/app/components/login/login.component.scss
@@ -1,21 +1,23 @@
-.container > * {
-  width: 100%;
-}
-#field1 {
-  width: 100%;
+@import "../../../scss/mixin.scss";
+
+.field1 {
+  @include input_width;
 }
 .center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 25%;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	@include width(25%);
 }
-#button {
-  float: right;
+.button {
+	float: right;
 }
 a {
-  text-decoration: none;
+	text-decoration: none;
 }
 .div1 {
-  padding: 30px 0px;
+	padding: 30px 0;
+}
+.container > * {
+	@include input_width;
 }
