--- a/my-project/src/app/components/main-archive/main-archive.component.scss
+++ b/my-project/src/app/components/main-archive/main-archive.component.scss
@@ -1,49 +1,42 @@
+@import "../../../scss/mixin.scss";
+//colors
+$gray: rgb(128, 128, 128);
+
 .matcard {
-  width: 600px;
-  margin-top: 7%;
-  margin-left: 55%;
+	@include width(600px);
+	margin-top: 7%;
+	margin-left: 55%;
 }
 .span {
-  top: 10px;
-  right: 0px;
-  position: absolute;
+	top: 10px;
+	right: 0;
+	position: absolute;
 }
-
 .div2 {
-  outline: none;
-  width: 130px;
-  position: relative;
-  word-wrap: break-word;
+	outline: none;
+	@include width(130px);
+	position: relative;
+	word-wrap: break-word;
 }
-div:empty:before {
-  content: attr(data-text);
-  color: gray;
-}
-
 .take_note {
-  padding-top: 12px;
-  padding-left: 14px;
-  padding-bottom: 0px;
+	padding-top: 12px;
+	padding-left: 14px;
+	padding-bottom: 0;
 }
 .card_note {
-  margin: 1%;
-  height: min-content;
-  /* width: 15px; */
-}
-/* .note-card
-{
-
-  display:flex;
-  flex-wrap:wrap;
-
-} */
-.card_note:hover .action {
-  opacity: 1;
+	margin: 1%;
+	height: min-content;
+	&:hover .action {
+		opacity: 1;
+	}
 }
 .action {
-  opacity: 0;
+	opacity: 0;
 }
-.archive
-{
-  margin-top:90px;
+.archive {
+	margin-top: 90px;
+}
+div:empty:before {
+	content: attr(data-text);
+	color: $gray;
 }
