--- a/my-project/src/app/components/more/more.component.scss
+++ b/my-project/src/app/components/more/more.component.scss
@@ -1,24 +1,23 @@
+@import '../../../scss/mixin.scss';
+
 .textarea {
-  width: 90%;
-  outline: none;
-}
-.textarea:empty:before {
-  content: attr(data-text);
-  opacity: 0.5;
-  font-size: 12px;
+@include width(90%);
+	outline: none;
+	&:empty:before {
+		content: attr(data-text);
+		opacity: 0.5;
+		font-size: 12px;
+	}
 }
 .area {
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden !important;
-  outline: none;
+	@include wrap();
 }
 .div1 {
-  width: 257px;
-  padding-left: 10px;
+	@include width(257px);
+	padding-left: 10px;
 }
 .div2 {
-  display: flex;
-  align-items: flex-start;
-  font-size: 17px;
+	display: flex;
+	align-items: flex-start;
+	font-size: 17px;
 }
