--- a/my-project/src/app/components/navbar/navbar.component.html
+++ b/my-project/src/app/components/navbar/navbar.component.html
@@ -7,18 +7,18 @@
 
             <div fxFlex=30 fxFlex.xs=35  style="width:200px" fxLayout="row" fxLayoutAlign="start center"  >
               <div>
-          <button mat-icon-button class="menu" matTooltip="Menu" >
+          <button mat-icon-button class="menu commonColor" matTooltip="Menu" >
             <i (click)="drawer.toggle()" class="material-icons ">
               menu
             </i>
           </button>
         </div>
-          <div  class="head" >
+          <div  class="head commonColor" >
           <span>{{name}}</span></div>
 
          </div>
           <div fxFlex=40 fxFlex.xs=45>
-            <button mat-icon-button class="searchicon" (click)="search();displayName(' Fundoo Notes  ')" >
+            <button mat-icon-button class="searchicon commonColor" (click)="search();displayName(' Fundoo Notes  ')" >
               <i class="material-icons">
                 search
               </i>
@@ -27,7 +27,7 @@
               [(ngModel)]="searchInput">
           </div>
           <div fxFlex=30 fxFlex.xs=30 fxLayoutAlign="end none" >
-          <button mat-icon-button aria-label="view_agenda" class="view" fxShow.xs="false" fxShow.sm="false" fxShow.md="true" fxShow.lg="true">
+          <button mat-icon-button aria-label="view_agenda" class="view commonColor" fxShow.xs="false" fxShow.sm="false" fxShow.md="true" fxShow.lg="true">
             <mat-icon aria-label="view_stream" (click)="viewList()" *ngIf="grid==0">view_stream</mat-icon>
             <mat-icon aria-label="view_module" (click)="viewGrid()" *ngIf="grid==1">view_module</mat-icon>
 
@@ -95,7 +95,7 @@
             <div flexLayout="row" fxLayoutAlign="space-around center" >
               <div  class="profilepic1" (click)="$event.stopPropagation();input.click()"
               [ngStyle]="{'background-image':'url(' +img+ ')','background-size':'cover'}">
-              <div class="change_image">Change</div>
+              <div class="change_image commonColor">Change</div>
                 <input type="file" class="input" (change)="onFileSelected($event)" #input>
               </div>
               <div>
@@ -105,7 +105,7 @@
             </div>
             <hr>
 
-                <button mat-button class="button2" (click)="Logout()">Log out</button>
+                <button mat-button class="button2 commonColor" (click)="Logout()">Log out</button>
 
           </mat-menu>
           <router-outlet></router-outlet>
