--- a/my-project/src/app/components/signup/signup.component.html
+++ b/my-project/src/app/components/signup/signup.component.html
@@ -10,11 +10,11 @@
           <img src="../../../assets/images/google.svg" alt="google" class="center">
           <mat-card-title>Create your FundooNote Account</mat-card-title>
           <mat-card-subtitle>to continue to fundooNotes</mat-card-subtitle>
-          <mat-form-field id="field1">
+          <mat-form-field class="field1">
             <input matInput placeholder="First name" [(ngModel)]="model.fname" formControlName="fname" required>
             <mat-error class="alert" *ngIf="!rForm.controls['fname'].valid && rForm.controls['fname'].touched">Please provide first name</mat-error>
           </mat-form-field>
-          <mat-form-field id="field2">
+          <mat-form-field class="field2">
             <input matInput placeholder="Last name" [(ngModel)]="model.lname" formControlName="lname" required>
             <mat-error class="alert" *ngIf="!rForm.controls['lname'].valid && rForm.controls['lname'].touched">please provide last name</mat-error>
           </mat-form-field>
@@ -22,12 +22,12 @@
             <input matInput placeholder="Email" [(ngModel)]="model.uname " formControlName="email" required>
             <mat-error class="alert" *ngIf="!rForm.controls['email'].valid && rForm.controls['email'].touched">provide a valid email</mat-error>
           </mat-form-field>
-          <mat-form-field id="pass1">
+          <mat-form-field class="pass1">
             <input matInput placeholder="Password" formControlName="password" [type]="hide ? 'text' : 'password'" [(ngModel)]="model.pass"
               required>
             <mat-error class="alert" *ngIf="!rForm.controls['password'].valid && rForm.controls['password'].touched">Enter a password(min-length:6) </mat-error>
           </mat-form-field>
-          <mat-form-field id="pass2">
+          <mat-form-field class="pass2">
             <input matInput placeholder="Confirm password" formControlName="cnfpassword" [type]="hide ? 'text' : 'password'">
             <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility' : 'visibility_off'}}</mat-icon>
             <mat-error class="alert" *ngIf="!rForm.controls['cnfpassword'].valid && rForm.controls['cnfpassword'].touched">Both password should be same</mat-error>
@@ -51,8 +51,8 @@
           <br>
           <br>
 
-          <button mat-flat-button id="button" [disabled]="!rForm.valid" (click)="Signup()">Sign Up</button>
-          <a routerLink="/login" id="link">Sign in instead</a>
+          <button mat-flat-button class="button" [disabled]="!rForm.valid" (click)="Signup()">Sign Up</button>
+          <a routerLink="/login" class="link">Sign in instead</a>
           <br>
 
         </mat-card>
