--- a/my-project/src/app/components/signup/signup.component.scss
+++ b/my-project/src/app/components/signup/signup.component.scss
@@ -1,55 +1,49 @@
-.container > * {
-    width: 100%;
-  }
-  #field2
-  {
-    margin-left: 10px;
-    width: 48%
-  }
-  #field1
-  {
-    float:left;
-    width: 48%
-  }
-  #button
-{
-  float:right;
+
+@import '../../../scss/mixin.scss';
+
+//colors
+$color_alto_approx: rgb(220, 220, 220);
+$color_chalet_green_approx: rgb(85, 107, 47);
+
+.field2 {
+	margin-left: 10px;
+  @include width(48%);
 }
-a
-{
-  text-decoration: none;
+.field1 {
+	float: left;
+	@include width(48%);
 }
-.user
-{
-    width:100%
+.button {
+	float: right;
 }
-#pass1{
-width: 48%;
+a {
+	text-decoration: none;
 }
-#pass2
-{ margin-left:10px;
-    width:48%;
-   
+.user {
+	@include input_width;
+}
+.pass1 {
+	@include width(48%);
+}
+.pass2 {
+	margin-left: 10px;
+	@include width(48%);
 }
 .center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 35%;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	@include width(35%);
 }
- .example-card {
- background-color: gainsboro
-  }
-    
-  #link
-  {
-      float:left;
-  }
-  .select
-  {
-    background-color: darkolivegreen;
-  }
-  .deselect
-  {
-    
-  }
+.example-card {
+	background-color: $color_alto_approx;
+}
+#link {
+	float: left;
+}
+.select {
+	background-color: $color_chalet_green_approx;
+}
+.container > * {
+	@include input_width;
+}
