--- a/my-project/src/app/components/update/update.component.scss
+++ b/my-project/src/app/components/update/update.component.scss
@@ -1,69 +1,63 @@
+@import '../../../scss/variables.scss';
+
+//colors
+
+$black_20: rgba(0, 0, 0, 0.2);
+$black_14: rgba(0, 0, 0, 0.14);
+$black_12: rgba(0, 0, 0, 0.12);
+
 .matcard {
-  width: 600px;
-  height: auto;
+	height: auto;
 }
-.span {
-  top: 10px;
-  right: 0px;
-  position: absolute;
+.mat-card-actions {
+	display: block;
+	margin-bottom: 0;
 }
-
-.div2 {
-  outline: none;
-  width: 550px;
-  position: relative;
+.mat-card-content {
+	display: block;
+	margin-bottom: 0;
 }
-div:empty:before {
-  content: attr(data-text);
-  color: gray;
+.mat-card-subtitle {
+	display: block;
+	margin-bottom: 0;
 }
-
-.take_note {
-  padding-top: 12px;
-  padding-left: 14px;
-  padding-bottom: 0px;
-}
-::ng-deep .mat-dialog-container {
-  box-shadow: 0 11px 15px -7px rgba(0, 0, 0, 0.2),
-    0 24px 38px 3px rgba(0, 0, 0, 0.14), 0 9px 46px 8px rgba(0, 0, 0, 0.12);
-  display: block;
-  padding: 0px;
-  border-radius: 2px;
-  box-sizing: border-box;
-  overflow: hidden;
-  overflow-y: auto;
-  outline: 0;
-  width: 100%;
-  height: 100%;
-  min-height: inherit;
-  max-height: inherit;
-}
-.mat-card-actions,
-.mat-card-content,
-.mat-card-subtitle,
 .mat-card-title {
-  display: block;
-  margin-bottom: 0px;
+	display: block;
+	margin-bottom: 0;
 }
 mat-card-actions {
-  margin-left: 0px;
-  margin-right: 0px;
-  padding: 0px 0px;
-}
-.mat-card > .mat-card-actions:last-child {
-  margin-bottom: -16px;
-  padding-bottom: 0;
-  padding-right: 30px;
+	margin-left: 0;
+	margin-right: 0;
+	padding: 0;
 }
 .float {
-  float: right;
-  margin-top: 9px;
+	float: right;
+	margin-top: 9px;
 }
-.material-icons {
-  cursor: pointer;
-  opacity: 0.5;
+
+div:empty:before {
+	content: attr(data-text);
+	color: $gray;
 }
-.material-icons:hover {
-  cursor: pointer;
-  opacity: 1.5;
+::ng-deep .mat-dialog-container {
+
+	box-shadow: 0 11px 15px -7px $black_20, 0 24px 38px 3px $black_14, 0 9px 46px 8px $black_12;
+	display: block;
+	padding: 0;
+
+	border-radius: 2px;
+
+	box-sizing: border-box;
+	overflow: hidden;
+	overflow-y: auto;
+	outline: 0;
+	width: 100%;
+	height: 100%;
+	min-height: inherit;
+	max-height: inherit;
+}
+.mat-card > .mat-card-actions:last-child {
+	margin-bottom: -16px;
+	padding-bottom: 0;
+	padding-right: 30px;
 }
