--- a/my-project/src/styles.scss
+++ b/my-project/src/styles.scss
@@ -1,7 +1,49 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
-html, body { height: 100%; }
-body { margin: 0; font-family: 'Roboto', sans-serif; }
-
-html, body { height: 100%; }
-body { margin: 0; font-family: 'Roboto', sans-serif; }
+@import "./scss/variables.scss";
+@import "./scss/mixin.scss";
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: "Roboto", sans-serif;
+}
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: "Roboto", sans-serif;
+}
+.matcard {
+  width: 600px;
+}
+.span {
+  top: 10px;
+  right: 0;
+  position: absolute;
+}
+.div2 {
+  outline: none;
+  width: 550px;
+  position: relative;
+}
+.take_note {
+  padding-top: 12px;
+  padding-left: 14px;
+  padding-bottom: 0;
+}
+.material-icons {
+  cursor: pointer;
+  opacity: 0.5;
+  &:hover {
+    cursor: pointer;
+    opacity: 1.5;
+  }
+}
+.wrap {
+@include wrap();
+}
