--- a/my-project/src/app/components/signup/signup.component.html
+++ b/my-project/src/app/components/signup/signup.component.html
@@ -7,7 +7,7 @@
         <mat-card class="card">
 
 
-          <img src="../../../assets/images/google.svg" alt="google" class="center">
+          <img src="../../../assets/images/a-img.png" alt="FundooNote" class="center">
           <mat-card-title>Create your FundooNote Account</mat-card-title>
           <mat-card-subtitle>to continue to fundooNotes</mat-card-subtitle>
           <mat-form-field class="field1">
