--- a/my-project/src/app/components/login/login.component.scss
+++ b/my-project/src/app/components/login/login.component.scss
@@ -7,7 +7,8 @@
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
-	@include width(25%);
+  @include width(45%);
+   margin-top: -45px;
 }
 .button {
 	float: right;
