--- a/my-project/src/app/components/navbar/navbar.component.scss
+++ b/my-project/src/app/components/navbar/navbar.component.scss
@@ -1,4 +1,4 @@
-@import '../../../scss/mixin.scss';
+@import '../../../scss/_mixin.scss';
 
 //colors
 $black: rgb(0, 0, 0);
@@ -129,4 +129,8 @@ $black_54: rgba(0, 0, 0, 0.54);
 }
 input:focus {
   background-color: $white;
+}
+.mat-menu
+{
+  position:fixed;
 }
