--- a/my-project/src/app/components/main-collaborator/main-collaborator.component.html
+++ b/my-project/src/app/components/main-collaborator/main-collaborator.component.html
@@ -19,7 +19,7 @@
 
 
 
-    <div style="width: 95%" fxLayout="row" fxLayoutGap="10px" *ngFor="let data of colList ">
+    <div class="width" fxLayout="row" fxLayoutGap="10px" *ngFor="let data of colList ">
       <div fxFlex="10%" fxLayoutAlign="start center">
           <button mat-mini-fab class="miniFab" disabled >{{data.firstName|titlecase|slice:0:1}} </button>
       </div>
@@ -35,7 +35,7 @@
 
 
 
-  <div style="width: 95%" fxLayout="row" fxLayoutGap="10px" *ngFor="let data of listCollaborator ">
+  <div class="width" fxLayout="row" fxLayoutGap="10px" *ngFor="let data of listCollaborator ">
       <div fxFlex="10%" fxLayoutAlign="start center">
           <button mat-mini-fab class="miniFab" disabled>{{data.firstName|titlecase|slice:0:1}}</button>
       </div>
@@ -67,7 +67,7 @@
 
   </mat-card>
   <mat-menu  (click)="$event.stopPropagation()" #menu="matMenu"   [overlapTrigger]="false">
-    <button mat-menu-item style="width:280px" *ngFor='let search of userlist' (click)="addToColaborator(search)">
+    <button mat-menu-item class="width1" *ngFor='let search of userlist' (click)="addToColaborator(search)">
         {{search.firstName | titlecase}} {{search.lastName | titlecase}}   [{{search.email}}]
     </button>
   </mat-menu>
