error handler completed

--- a/my-project/src/app/components/more/more.component.html
+++ b/my-project/src/app/components/more/more.component.html
@@ -8,6 +8,9 @@
   <button mat-menu-item [matMenuTriggerFor]="addLabel" (click)="func()">
     Add label
   </button>
+  <button mat-menu-item (click)="questionAndanswer()">
+    Ask Question
+  </button>
 
 </mat-menu>
 
