--- a/my-project/src/styles.scss
+++ b/my-project/src/styles.scss
@@ -2,6 +2,9 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import "./scss/variables.scss";
 @import "./scss/mixin.scss";
+@import '~ngx-bar-rating/themes/br-default-theme';
+
+
 html,
 body {
   height: 100%;
